
5.2a3 -> 5.2a4:
    - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
    - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
    - jbj: yarn: convert rpmdb refcount to usage mutex.
    - jbj: yarn: convert psm refcount to usage mutex.
    - jbj: yarn: convert rpmxar refcount to usage mutex.
    - jbj: yarn: convert pgpDig refcount to usage mutex (avoid recurse deadlock).
    - jbj: yarn: convert rpmts refcount to usage mutex (avoid recurse deadlock).
    - jbj: rpmps: fix: avoid reusing items from pool for now.
    - proyvind: libcpuinfo may now return 64bit feature only if PER_LINUX_32BIT
	personality isn't set, so don't check un.machine anymore.
    - jbj: yarn: convert rpmtsi refcount to usage mutex.
    - jbj: yarn: convert rpmsx refcount to usage mutex.
    - jbj: yarn: convert rpmps refcount to usage mutex.
    - jbj: rpmds: fix: avoid pooling rpmdsThis/rpmdsSingle for now ...
    - jbj: headerReload: fix: don't free the header blob.
    - jbj: yarn: convert rpmte to a usage mutex (no refcounts).
    - jbj: yarn: convert rpmgi refcount to usage mutex.
    - jbj: yarn: use the pool changes where possible.
    - jbj: yarn: add generic Link/Unlink refcount diddlers.
    - jbj: yarn: add debugging, reuse counter, and zlog to rpmioPool.
    - jbj: yarn: trick up a __FILE__:__LINE__ from caller when failing too.
    - jbj: yarn: use EINVAL, not -1, for --without-pthreads portability.
    - jbj: yarn: glibc pthreads (at least) returns errno's, strrerror decodes.
    - jbj: yarn: fix: assert fail instead of exit on error.
    - jbj: yarn: use the pool allocator.
    - jbj: yarn: add a pool allocator.
    - devzero2000: add mkdtemp portability function to -lrpmmisc 
    - proyvind: do lazy mkdir of %_builddir, %_rpmdir & %_srcrpmdir when doing
	--install for src.rpms as well.
    - jbj: yarn: convert Header refcount to usage mutex.
    - jbj: zlog: rework trace log with a refcount mutex instead.