@@ -502,7 +502,6 @@ LIBRPMIO_0
     xstrncasecmp;
     xstrtolocale;
     XfdFree;
-    XfdLink;
     XfdNew;
     XurlFree;
     XurlNew;
